﻿更新履歴

==== Unreleased

==== Ver 2.8.0(2023/01/11)
 * NEW: サムネイル画像のコンテキストメニューに「画像をコピー」を追加 (thx @kzlogos!)
 * NEW: Segoe UI Emoji によるカラー絵文字の描画に対応（発言詳細欄のみ）
 * CHG: Twemojiの画像の取得元をMaxCDNからCloudflareに移行 (thx @sou_niyari!)

==== Ver 2.7.1(2022/09/03)
 * FIX: 発言一覧の選択位置を移動した際にデッドロックが発生する場合がある不具合を修正 (thx @Kazuki_Ashiya!)
 * FIX: 発言本文の翻訳時に発生したエラーが適切に処理されない不具合を修正

==== Ver 2.7.0(2022/07/30)
 * NEW: 発言詳細部の日時ラベルをクリックするとWebブラウザを起動してツイートを表示する機能を追加
 * NEW: 設定画面に「Twitter API v2 の使用を有効にする」のチェックボックスを追加
   - デフォルトで API v2 が有効となり、通常は変更する必要はありません
   - Twitter の API キーを独自に書き換えている場合で、Project への移行を完了できていない等の理由で API v2 を使用できない時はチェックを外してください
 * CHG: 発言詳細部の名前ラベルを投稿者とRTしたユーザーで分けずに表示するように変更
 * FIX: タブの移動後に発言一覧が空の表示になる不具合を修正
 * FIX: 読み込み中の待機ダイアログを表示する際にエラーが発生する不具合を修正
 * FIX: Recentタブの読み込み時にエラーダイアログが表示される場合がある不具合を修正
 * FIX: タブ名変更後にタイムラインを取得するとエラーが発生する不具合を修正

==== Ver 2.6.0(2022/07/24)
 * NEW: Recentタブの発言の取得に Twitter API v2 を使用
   - 従来の API v1.1 と比べて、15分間に取得できる回数の制限が15→180回に緩和、一度に取得できる件数が200→100件になります
 * NEW: RTしたユーザーのプロフィール・タイムラインを表示する機能をメニューに追加 (thx @kzlogos!)
 * NEW: 発言詳細欄の名前やアイコンのクリックによるプロフィール表示に対応
 * NEW: クリップボード経由での複数枚の画像ファイル添付に対応
 * NEW: 画面上に表示する解像度に応じたプロフィール画像の取得に対応
   - 高DPI環境で表示した場合により高解像度のプロフィール画像が取得されるようになります
   - リストのアイコンサイズを none に設定した場合、発言が選択されるまでプロフィール画像のダウンロードを行わなくなります
 * NEW: 発言のダブルクリック時の動作に「Reply All」(@返信ALL)を追加
 * NEW: 関連発言表示で会話ツリーの最新の発言を取得する機能を追加
 * NEW: Twemoji 14.0 に対応しました
  - Unicode 14.0 で追加された絵文字が表示されるようになります
 * CHG: ツイートの投稿者とRTしたユーザーに関するメニュー項目を整理
 * CHG: DMが選択されている時は「@返信」「@返信ALL」のどちらも「DM送信」と同じ動作となるように変更
 * CHG: 複数のユーザー宛のリプライ時にツイートの先頭にピリオドを加える仕様を廃止
 * CHG: 発言一覧上でEnterキーを押した時の動作をダブルクリック時と同じとなるように変更
 * CHG: 初回起動時のウィンドウサイズなどの初期値を変更
 * CHG: 更新間隔の最小値を15秒以上とする制限を廃止
 * FIX: 「Twitter API稼働状況」のリンク先を修正 (thx @kzlogos!)
 * FIX: 起動時に読み込まれた検索・リストタブでフォロー状態を表す色が反映されない不具合を修正 (thx @Hawklaver!)
 * FIX: 等幅フォント表示を有効にした場合に背景色の設定が全面に適用されない不具合を修正 (thx @StoutAmmo!)
 * FIX: 起動直後の時点で発言詳細欄の背景色設定が適用されていない不具合を修正
 * FIX: 自分のツイートに対する「@返信ALL」で自分宛のMentionが付かない不具合を修正 (thx @doug_lee42!)