@@ -66,12 +66,12 @@ test_script:
   - cmd: |
       set altCoverVersion=8.2.837
       set xunitVersion=2.4.1
-      set targetFramework=net472
+      set targetFramework=net48
       set nugetPackages=%UserProfile%\.nuget\packages
 
-      %nugetPackages%\altcover\%altCoverVersion%\tools\%targetFramework%\AltCover.exe --inputDirectory .\OpenTween.Tests\bin\%CONFIGURATION%\%targetFramework%\ --outputDirectory .\__Instrumented\ --assemblyFilter "?^OpenTween(?!\.Tests)" --typeFilter "?^OpenTween\." --fileFilter "\.Designer\.cs" --visibleBranches
+      %nugetPackages%\altcover\%altCoverVersion%\tools\net472\AltCover.exe --inputDirectory .\OpenTween.Tests\bin\%CONFIGURATION%\%targetFramework%\ --outputDirectory .\__Instrumented\ --assemblyFilter "?^OpenTween(?!\.Tests)" --typeFilter "?^OpenTween\." --fileFilter "\.Designer\.cs" --visibleBranches
 
-      %nugetPackages%\altcover\%altCoverVersion%\tools\%targetFramework%\AltCover.exe runner --recorderDirectory .\__Instrumented\ --executable %nugetPackages%\xunit.runner.console\%xunitVersion%\tools\%targetFramework%\xunit.console.exe -- .\__Instrumented\OpenTween.Tests.dll
+      %nugetPackages%\altcover\%altCoverVersion%\tools\net472\AltCover.exe runner --recorderDirectory .\__Instrumented\ --executable %nugetPackages%\xunit.runner.console\%xunitVersion%\tools\net472\xunit.console.exe -- .\__Instrumented\OpenTween.Tests.dll
 
 after_test:
   - ps: |
@@ -79,7 +79,7 @@ after_test:
       .\codecov.exe -f coverage.xml
   - ps: |
       $env:PATH = $env:PATH + ';C:\Program Files\Microsoft Visual Studio\2022\Community\Msbuild\Current\Bin\Roslyn\;C:\Program Files (x86)\Microsoft SDKs\Windows\v10.0A\bin\NETFX 4.8 Tools\'
-      $binDir = '.\OpenTween\bin\' + $env:CONFIGURATION + '\net472\'
+      $binDir = '.\OpenTween\bin\' + $env:CONFIGURATION + '\net48\'
       if ($env:RELEASE_TAG -eq 'true') {
         $destPath = $env:APPVEYOR_REPO_TAG_NAME + '.zip'
       } else {
